# JPs_MeltPoolDG

./: .gitignore  CMakeLists.txt  README.md  advection__diffusion_8hpp_source.html  advection__diffusion__operation_8hpp_source.html  advection__diffusion__operator_8hpp_source.html  advection__diffusion__problem_8hpp_source.html  annotated.html  boundaryconditions_8hpp_source.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionOperation-members.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionOperation.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionOperator-members.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionOperator.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionProblem-members.html  classMeltPoolDG_1_1AdvectionDiffusion_1_1AdvectionDiffusionProblem.html  classMeltPoolDG_1_1Curvature_1_1CurvatureOperation-members.html  classMeltPoolDG_1_1Curvature_1_1CurvatureOperation.html  classMeltPoolDG_1_1Curvature_1_1CurvatureOperator-members.html  classMeltPoolDG_1_1Curvature_1_1CurvatureOperator.html  classMeltPoolDG_1_1LevelSet_1_1LevelSetOperation-members.html  classMeltPoolDG_1_1LevelSet_1_1LevelSetOperation.html  classMeltPoolDG_1_1LevelSet_1_1LevelSetProblem-members.html  classMeltPoolDG_1_1LevelSet_1_1LevelSetProblem.html  classMeltPoolDG_1_1LinearSolve-members.html  classMeltPoolDG_1_1LinearSolve.html  classMeltPoolDG_1_1NormalVector_1_1NormalVectorOperation-members.html  classMeltPoolDG_1_1NormalVector_1_1NormalVectorOperation.html  classMeltPoolDG_1_1NormalVector_1_1NormalVectorOperator-members.html  classMeltPoolDG_1_1NormalVector_1_1NormalVectorOperator.html  classMeltPoolDG_1_1OperatorBase-members.html  classMeltPoolDG_1_1OperatorBase.html  classMeltPoolDG_1_1Postprocessor-members.html  classMeltPoolDG_1_1Postprocessor.html  classMeltPoolDG_1_1ProblemBase-members.html  classMeltPoolDG_1_1ProblemBase.html  classMeltPoolDG_1_1ProblemSelector-members.html  classMeltPoolDG_1_1ProblemSelector.html  classMeltPoolDG_1_1Reinitialization_1_1OlssonOperator-members.html  classMeltPoolDG_1_1Reinitialization_1_1OlssonOperator.html  classMeltPoolDG_1_1Reinitialization_1_1ReinitializationOperation-members.html  (+116 more)
.github/workflows/: indentation.yml  tests.yml
include/: boundaryconditions.h  boundaryconditions.hpp  curvature.hpp  fieldconditions.hpp  levelset.hpp  levelsetParallel.hpp  levelsetparameters.hpp  linearsolve.hpp  normalvector.hpp  normalvectoroperator.hpp  outputgenerator.hpp  postprocessor.hpp  problembase.hpp  problemselector.hpp  reinitialization.hpp  reinitializationoperator.hpp  simulationbase.hpp  timeiterator.hpp  utilityFunctions.hpp  utilityfunctions.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
simulations/: CMakeLists.txt
simulations/advection_diffusion/: CMakeLists.txt  advection_diffusion.cpp  advection_diffusion.json
simulations/channelflow/: CMakeLists.txt  channelflow.cpp
simulations/error_vortexbubble_parallel/: CMakeLists.txt  vortexbubble.prm  vortexbubble_parallel.cpp
simulations/reinit_circle/: CMakeLists.txt  reinit_circle.cpp  reinit_circle.json
simulations/risingbubble3d/: CMakeLists.txt  risingbubble3d.cpp
simulations/rotatingbubble/: CMakeLists.txt  Makefile  cmake_install.cmake  myVolumes.txt  rotatingbubble.cc  rotatingbubble.cpp  rotatingbubble.json  rotatingbubble.prm
simulations/test_rotatingbubble/: rotatingbubble.cc  rotatingbubble.prm
simulations/vortexbubble/: CMakeLists.txt  vortexbubble.cpp
simulations/vortexgaussian/: CMakeLists.txt  vortexgaussian.cpp
source/: curvature.cpp  levelset.cpp  levelsetParallel.cpp  levelsetparameters.cpp  normalvector.cpp  reinitialization.cpp  timeiterator.cpp  utilityFunctions.cpp  utilityfunctions.cpp
source/curvature/: curvature.cpp
source/interface/: parameters.cpp
source/level_set/: levelset.cpp
source/levelset/: levelset.cpp
source/normal_vector/: normalvector.cpp
source/normalvector/: normalvector.cpp
source/reinitialization/: reinitialization.cpp
tests/: CMakeLists.txt  advection_diffusion.json  advection_diffusion_adaflo.json  advection_diffusion_adaflo.with_adaflo_support=on.mpirun=4.output  advection_diffusion_amr.json  advection_diffusion_amr.mpirun=4.output  advection_diffusion_amr_mf.json  advection_diffusion_amr_mf.mpirun=4.output  advection_diffusion_amr_mf_adaflo.json  advection_diffusion_amr_mf_adaflo.with_adaflo_support=on.mpirun=4.output  advection_diffusion_mf.json  advection_diffusion_mf.mpirun=4.output  advection_diffusion_mf_adaflo.with_adaflo_support=on.mpirun=4.output  recoil_pressure.json  recoil_pressure.with_adaflo_support=on.mpirun=4.output  recoil_pressure_amr.json  recoil_pressure_amr.with_adaflo_support=on.mpirun=4.output  recoil_pressure_fixed_solid_domain.json  recoil_pressure_fixed_solid_domain.with_adaflo_support=on.mpirun=4.output  recoil_pressure_simplex.json  recoil_pressure_simplex.with_simplex_support=on.with_adaflo_support=on.mpirun=4.output  reinit_circle.json  reinit_circle.mpirun=4.output  reinit_circle_adaflo.json  reinit_circle_adaflo.with_adaflo_support=on.mpirun=4.output  reinit_circle_amr.json  reinit_circle_amr.mpirun=4.output  reinit_circle_amr_mf.json  reinit_circle_amr_mf.mpirun=4.output  reinit_circle_amr_mf_adaflo.json  reinit_circle_amr_mf_adaflo.with_adaflo_support=on.mpirun=4.output  reinit_circle_simplex.json  reinit_circle_simplex.with_simplex_support=on.output  rising_bubble.json  rising_bubble.mpirun=4.output  rising_bubble.with_adaflo_support=on.mpirun=4.output  rising_bubble_amr_mf.json  rising_bubble_amr_mf.with_adaflo_support=on.mpirun=4.output  rising_bubble_ls_degree1.json  rising_bubble_ls_degree1.with_adaflo_support=on.mpirun=4.output  (+27 more)
(+118 files in other folders)
